fix navbar on iPhone 5

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -480,3 +480,17 @@ label {
     }
   }
 }
+
+@media screen and (max-width: 320px) {
+  h1 {
+    font-size: 10px;
+  }
+
+  .navbar-brand {
+    .navbar-logo {
+      height: 26px;
+      padding-right: 10px;
+      margin-top: 2px;
+    }
+  }
+}
